[project]
name = "gtiti"
version = "0.1.0"
description = "Global Telecom Intelligence — MCP server for Claude"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
gtiti = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
